# stable-diffusion.cpp

./: README.md
docs/: animatediff.md  ip_adapter.md  pixelization.md
examples/: CMakeLists.txt
examples/cli/: CMakeLists.txt  main.cpp
examples/common/: cli_params.cpp  cli_params.h  common.cpp  common.h  resource_owners.hpp
examples/httpserver/: CMakeLists.txt  config.h  http_callbacks.h  http_json_requests.h  http_json_responses.h  main.cpp  sd.h  sdWebuiConfigStruct.h
examples/joyai_test/: CMakeLists.txt  main.cpp
examples/server/: SDModelScanner.h  latent_preview.h
examples/session/: CMakeLists.txt  generate.cpp  generate.h  instrument.cpp  instrument.h  main.cpp  serialize.cpp  serialize.h  session.cpp  session.h  session_params.cpp  session_params.h  tokenize.cpp  tokenize.h
examples/session/tests/: check.h  test_apply_flags.cpp  test_instrument.cpp  test_serialize.cpp  test_tokenize.cpp
include/: stable-diffusion.h
scripts/: convert_pixelization.py  convert_u2net.py
src/: model.h  model_loader.cpp  name_conversion.cpp  pixelizer.cpp  pixelizer.h  rembg.cpp  rembg.h  stable-diffusion.cpp
src/conditioning/: conditioner.hpp
src/core/: ggml_extend.hpp  ggml_extend_backend.cpp  ggml_extend_backend.h
src/model/adapter/: ip_adapter.hpp
src/model/diffusion/: joyai_image.hpp
src/model/pixelization/: pixelization.hpp
src/model/segmentation/: u2net.hpp
src/model/te/: llm.hpp
src/runtime/: guidance.cpp  guidance.h
